objects/SLP_SelfRegistrationLog__c.object
<CustomObject>
    <description>This log is used to register all the activities of the userid&apos;s for self registration</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailId__c</fullName>
        <label>EmailId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SLP_SelfRegistrationLog</label>
    <nameField>
        <label>SLP_SelfRegistrationLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLP_SelfRegistrationLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>